clang-ir/tests/snapshots/snapshot_fixtures__fixtures__shl.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/shl.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = ConstArray { ty: Array { element_type: Named("s8i"), size: 4 }, elts: Str("%d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[4] = ConstArray { ty: Array { element_type: Named("s8i"), size: 4 }, elts: Str("%u\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn ishl(%arg0: s32i, %arg1: s32i) -> s32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s32i):
        %27 = alloca s32i, "a", align 4
        %28 = alloca s32i, "b", align 4
        %29 = alloca s32i, "__retval", align 4
        store %arg0, %27
        store %arg1, %28
        %30 = load %27 : s32i, align 4
        %31 = load %28 : s32i, align 4
        shift
        store %32, %29
        %33 = load %29 : s32i
        return %33
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca u32i, "u", align 4
        %2 = const 0 : s32i
        store %2, %0
        %3 = get_global @printf : (s8i*, ...) -> s32i*
        %4 = get_global @.str : s8i[4]*
        %5 = cast(array_to_ptrdecay) %4 : s8i*
        %6 = const 1 : s32i
        %7 = const 4 : s32i
        %8 = call @ishl(%6, %7) : s32i [all]
        %9 = call @printf(%5, %8) : s32i [all]
        %10 = get_global @printf : (s8i*, ...) -> s32i*
        %11 = get_global @.str : s8i[4]*
        %12 = cast(array_to_ptrdecay) %11 : s8i*
        %13 = const 3 : s32i
        %14 = const 5 : s32i
        %15 = call @ishl(%13, %14) : s32i [all]
        %16 = call @printf(%12, %15) : s32i [all]
        %17 = const 1 : u32i
        store %17, %1, align 4
        %18 = get_global @printf : (s8i*, ...) -> s32i*
        %19 = get_global @.str.1 : s8i[4]*
        %20 = cast(array_to_ptrdecay) %19 : s8i*
        %21 = load %1 : u32i, align 4
        %22 = const 31 : s32i
        shift
        %24 = call @printf(%20, %23) : s32i [all]
        %25 = const 0 : s32i
        store %25, %0
        %26 = load %0 : s32i
        return %26
}
